[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main/main.gd" id="1_main"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.08, 0.06, 0.12, 1)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="UIRoot" type="MarginContainer" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 1280.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="UILayer/UIRoot"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TopBar" type="PanelContainer" parent="UILayer/UIRoot/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="HBox" type="HBoxContainer" parent="UILayer/UIRoot/VBox/TopBar"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="CoinLabel" type="Label" parent="UILayer/UIRoot/VBox/TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Coin: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="UILayer/UIRoot/VBox/TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Enerji: 5/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TicketArea" type="CenterContainer" parent="UILayer/UIRoot/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TicketPlaceholder" type="Label" parent="UILayer/UIRoot/VBox/TicketArea"]
unique_name_in_owner = true
layout_mode = 2
text = "[ BILET ALANI ]
Burada kazÄ± kazan bileti olacak"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="VBoxContainer" parent="UILayer/UIRoot/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
theme_override_constants/separation = 8

[node name="BiletSecimi" type="HBoxContainer" parent="UILayer/UIRoot/VBox/BottomPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="Btn1" type="Button" parent="UILayer/UIRoot/VBox/BottomPanel/BiletSecimi"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kagit"

[node name="Btn2" type="Button" parent="UILayer/UIRoot/VBox/BottomPanel/BiletSecimi"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bronz"
disabled = true

[node name="Btn3" type="Button" parent="UILayer/UIRoot/VBox/BottomPanel/BiletSecimi"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gumus"
disabled = true

[node name="ActionButtons" type="HBoxContainer" parent="UILayer/UIRoot/VBox/BottomPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="CharmBtn" type="Button" parent="UILayer/UIRoot/VBox/BottomPanel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Charm"

[node name="KoleksiyonBtn" type="Button" parent="UILayer/UIRoot/VBox/BottomPanel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Koleksiyon"

[node name="BackBtn" type="Button" parent="UILayer/UIRoot/VBox/BottomPanel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Geri"

[connection signal="pressed" from="UILayer/UIRoot/VBox/BottomPanel/ActionButtons/BackBtn" to="." method="_on_back_pressed"]
